<!--
『Androidアプリ開発の教科書』
第11章
Web API連携サンプル

@author Shinzo SAITO

res/values/string.xmlファイル
-->
<resources>
    <string name="app_name">お出かけ支援アプリ</string>
    <string name="title">お出かけ支援アプリ</string>
    <string name="current_hint">現在地</string>
    <string name="waypoint_hint">経由地</string>
    <string name="destination_hint">目的地</string>
    <string name="line" translatable="false">ーーーーーーーーーーーーーーーーーーーーーーーーーーー</string>
    <string name="alarm_title">アラーム</string>
    <string name="time_set">時間設定</string>
    <string name="alarm_set">アラームをセット</string>
    <string name="alarm_cancel">アラームをキャンセル</string>
    <string name="subject">件名</string>
    <string name="message">本文</string>
    <string name="send">送信</string>
</resources>