<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:orientation="vertical"></LinearLayout>

        <Button
            android:id="@+id/selectTimeBt"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="36dp"
            android:text="@string/time_set"
            android:textSize="26dp" />

        <Button
            android:id="@+id/setAlarmBt"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="36dp"
            android:text="@string/alarm_set"
            android:textSize="26dp" />

        <Button
            android:id="@+id/cancelAlarmBt"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="36dp"
            android:text="@string/alarm_cancel"
            android:textSize="26dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>