<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="TO"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject"
                android:padding="10dp"
                tools:ignore="MissingConstraints,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="@string/message"
                android:padding="10dp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_send"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:padding="10dp"
            android:text="@string/send"
            android:textSize="25sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>