<?xml version="1.0" encoding="utf-8"?>
<!--
『Androidアプリ開発の教科書』
第11章
Web API連携サンプル

@author Shinzo SAITO

ファイル名=activity_main.xml
-->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_marginTop="10dp"
		android:layout_weight="0.5"
		android:background="@color/white"
		android:orientation="vertical">

		<ImageView
			android:id="@+id/imageView"
			android:layout_width="match_parent"
			android:layout_height="278dp"
			app:srcCompat="@drawable/title" />

		<TextView
			android:id="@+id/tvWeatherTelop"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:textColor="@color/black"
			android:textSize="20sp" />

		<TextView
			android:id="@+id/tvWeatherDesc"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textColor="@color/black"
			android:textSize="15sp" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="49dp"
			android:gravity="center|center_vertical"
			android:orientation="horizontal">

			<EditText
				android:id="@+id/current_location"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:hint="@string/current_hint"
				android:textColor="@color/black"
				android:textColorHint="@color/black" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="→"
				android:textColor="@color/black"
				android:textSize="20dp" />

			<EditText
				android:id="@+id/waypoint"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:hint="@string/waypoint_hint"
				android:textColor="@color/black"
				android:textColorHint="@color/black" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="→"
				android:textColor="@color/black"
				android:textSize="20dp" />

			<EditText
				android:id="@+id/destination"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:hint="@string/destination_hint"
				android:textColor="@color/black"
				android:textColorHint="@color/black" />
		</LinearLayout>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/line"
			android:textColor="@color/white" />

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="80dp"
			android:orientation="horizontal">

			<!--			ButtonをImageButtonに変更-->

			<ImageButton
				android:id="@+id/mailButton"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="30dp"
				android:layout_marginLeft="30dp"
				android:layout_marginEnd="10dp"
				android:layout_marginRight="10dp"
				app:srcCompat="@drawable/mailbutton" />

			<ImageButton
				android:id="@+id/mapButton"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="30dp"
				android:layout_marginLeft="30dp"
				android:layout_marginEnd="10dp"
				android:layout_marginRight="10dp"
				android:onClick="onMapShowCurrentButtonClick"
				app:srcCompat="@drawable/mapbutton" />

			<ImageButton
				android:id="@+id/weatherButton"
				android:layout_width="80dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="30dp"
				android:layout_marginLeft="30dp"
				android:layout_marginEnd="10dp"
				android:layout_marginRight="10dp"
				app:srcCompat="@drawable/weatherbutton" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="84dp"
			android:orientation="horizontal">

			<ImageButton
				android:id="@+id/spotButton"
				android:layout_width="80dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="100dp"
				android:layout_marginLeft="100dp"
				android:layout_marginEnd="10dp"
				android:layout_marginRight="10dp"
				android:onClick="SpotShow"
				app:srcCompat="@drawable/spotbutton" />

			<ImageButton
				android:id="@+id/alarmButton"
				android:layout_width="80dp"
				android:layout_height="80dp"
				android:layout_marginStart="20dp"
				android:layout_marginLeft="20dp"
				android:layout_marginEnd="10dp"
				android:layout_marginRight="10dp"
				app:srcCompat="@drawable/alarmbutton" />
		</LinearLayout>

		<TextView
			android:id="@+id/tvLatitude"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:textColor="@color/black"
			android:layout_marginRight="5dp"
			android:layout_weight="0.5"
			android:maxLines="1"/>

		<TextView
			android:id="@+id/tvLongitude"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:textColor="@color/black"
			android:layout_weight="0.5"
			android:maxLines="1"/>


	</LinearLayout>
</LinearLayout>

